Updated GCSE subject pages and styles

--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>English Literature</h4>
-                                    <p>Classic texts and critical analysis skills</p>
+                                    <p>Classic texts and critical analysis skills for comprehensive literary understanding</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Tiers</span>
@@ -735,7 +735,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>English Language</h4>
-                                    <p>Writing, reading, and communication skills</p>
+                                    <p>Writing, reading, and communication skills development</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Tiers</span>
@@ -756,7 +756,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>History</h4>
-                                    <p>Historical events and source analysis</p>
+                                    <p>Historical events and source analysis across different time periods</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Topics</span>
@@ -777,7 +777,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>Geography</h4>
-                                    <p>Human and physical geography exploration</p>
+                                    <p>Human and physical geography exploration covering landscapes, climate, and societies</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Topics</span>
@@ -799,7 +799,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>French</h4>
-                                    <p>Language skills and cultural understanding</p>
+                                    <p>Language skills and cultural understanding through practical communication</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Skills</span>
@@ -821,7 +821,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>Spanish</h4>
-                                    <p>Language skills and cultural exploration</p>
+                                    <p>Language skills and cultural exploration through immersive learning</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Skills</span>
@@ -865,7 +865,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>Religious Studies</h4>
-                                    <p>Ethics, philosophy and world religions</p>
+                                    <p>Ethics, philosophy and world religions exploration</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">All Themes</span>
@@ -887,7 +887,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>Art & Design</h4>
-                                    <p>Creative expression and visual communication</p>
+                                    <p>Creative expression and visual communication through artistic techniques</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">Portfolio</span>
@@ -1217,7 +1217,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>A-Level Psychology</h4>
-                                    <p>Human behaviour and mental processes</p>
+                                    <p>Human behaviour and mental processes through scientific analysis</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
 
@@ -1238,7 +1238,7 @@
                                 </div>
                                 <div class="scroll-content">
                                     <h4>A-Level Sociology</h4>
-                                    <p>Society, culture, and social behavior analysis</p>
+                                    <p>Society, culture, and social behaviour through critical analysis</p>
                                     <div class="quick-features">
                                         <span class="quick-tag">All Exam Boards</span>
                                         <span class="quick-tag">Critical Thinking</span>
