--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -125,7 +125,7 @@
             opacity: 0.12; /* unified brightness */
             pointer-events: none;
             /* Disable continuous drifting animation to reduce paint/compose cost near top */
-            animation: none !important;
+            display: block;
             /* Performance: hide decorative hero SVGs to avoid extra layers/compositing near top */
             display: none !important;
         }
@@ -215,18 +215,11 @@
         }
 
         .cta-button:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 12px 30px rgba(67,97,238,0.35), 0 0 0 4px rgba(67,97,238,0.15);
-            background: linear-gradient(135deg, var(--yuli-primary) 0%, var(--yuli-accent-blue) 100%);
-            border-color: var(--yuli-accent-blue);
-            color: white;
-            animation: glowPulse 1.2s ease-in-out infinite alternate;
-        }
-
-        @keyframes glowPulse {
-            0% { box-shadow: 0 10px 24px rgba(67,97,238,0.28), 0 0 0 2px rgba(67,97,238,0.10); }
-            100% { box-shadow: 0 16px 40px rgba(67,97,238,0.42), 0 0 0 6px rgba(67,97,238,0.18); }
-        }
+    transform: translateY(-1px);
+    background: #2d4bb5;
+    color: white;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+}
 
         /* Main Content */
         .main-content {
@@ -1488,6 +1481,13 @@
             </svg>
         </div>
 
+        <!-- Quadratic curve -->
+<div class="hero-icon" aria-hidden="true" style="top: 25%; left: 65%; width: 50px; animation-duration: 26s;">
+    <svg viewBox="0 0 120 100" xmlns="http://www.w3.org/2000/svg" fill="none">
+        <path d="M20 80 Q60 20 100 80" stroke="#ffffff" stroke-width="1.2"/>
+    </svg>
+</div>
+
         <!-- Not equal (≠) - upper band center-left, small -->
         <div class="hero-icon" aria-hidden="true" style="top: 6%; left: 32%; width: 70px; animation-duration: 22s;">
             <svg viewBox="0 0 140 60" xmlns="http://www.w3.org/2000/svg" fill="none">
@@ -1536,7 +1536,7 @@
                 <p class="tagline">Clarity, confidence, and exam results that last.</p>
                 <a href="/booking/booking-gcse-mathematics.html" class="cta-button">
                     <i class="fas fa-calendar-check"></i>
-                    Book a Diagnostic Lesson
+                    Book a Lesson
                 </a>
                 <div class="cta-subtext">From £20/hr · All UK exam boards covered</div>
             </div>
@@ -1764,25 +1764,25 @@
                     <div class="swiper-slide">
                       <div class="corp-testimonial">
                         <div class="corp-logo" aria-hidden="true">
-                          <img src="../../assets/logos/no%20user%20profile.png" alt="Profile placeholder" loading="lazy" />
+                            <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
                         </div>
                         <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                        <div class="corp-meta">Alex E • Student</div>
+                        <div class="corp-meta">Afifa A • Student</div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="corp-testimonial">
                         <div class="corp-logo" aria-hidden="true">
-                          <img src="../../assets/logos/no%20user%20profile.png" alt="Profile placeholder" loading="lazy" />
+                            <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
                         </div>
                         <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                        <div class="corp-meta">Ahmed M • Student</div>
+                        <div class="corp-meta">Robin • Student</div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="corp-testimonial">
                         <div class="corp-logo" aria-hidden="true">
-                          <img src="../../assets/logos/no%20user%20profile.png" alt="Profile placeholder" loading="lazy" />
+                            <img src="../../assets/logos/ethan.jpg" alt="Ethan Y profile" loading="lazy" />
                         </div>
                         <blockquote class="corp-quote">“Weekly sessions built confidence and timing. My daughter walked into the exam prepared and came out smiling.”</blockquote>
                         <div class="corp-meta">Ethan Y • Student</div>
@@ -1849,8 +1849,24 @@
               .corp-testimonials .swiper-slide { display: grid; place-items: center; }
 
               .corp-testimonial { max-width: 900px; width: 100%; background: #ffffff; border: 1px solid #e6eef9; border-radius: 16px; padding: 28px; box-shadow: 0 10px 25px rgba(15, 23, 42, 0.06); display: grid; grid-template-columns: 112px 1fr; gap: 22px; align-items: center; }
-              .corp-logo { width: 96px; height: 96px; border-radius: 12px; display: grid; place-items: center; background: #f1f6ff; box-shadow: inset 0 0 0 1px #e1ecff; }
-              .corp-logo img { max-width: 74px; max-height: 48px; object-fit: contain; filter: saturate(0.75) contrast(1.05); }
+              .corp-logo { 
+    width: 96px; 
+    height: 96px; 
+    border-radius: 12px; 
+    display: grid; 
+    place-items: center; 
+    background: #f1f6ff; 
+    box-shadow: inset 0 0 0 1px #e1ecff; 
+    overflow: hidden;
+}
+              .corp-logo img { 
+    width: 96px; 
+    height: 96px; 
+    object-fit: cover; 
+    object-position: center;
+    border-radius: 12px;
+    filter: saturate(0.75) contrast(1.05); 
+}
               .corp-quote { margin: 0; font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, sans-serif; font-size: 1.125rem; line-height: 1.65; color: #0f172a; }
               .corp-meta { margin-top: 8px; font-size: 0.95rem; color: #475569; font-weight: 600; }
 
