about page update

--- a/pages/subjects/gcse-physics.html
+++ b/pages/subjects/gcse-physics.html
@@ -1676,7 +1676,7 @@
                             </div>
                             <div>
                               <h3><span class="step">3. Targeted retrieval</span></h3>
-                              <p>Every student learns differently. I find out what motivates them, whether it is cars, football, or music, and use that to make lessons engaging. Maths becomes relevant, understandable, and easier to remember.</p>
+                              <p>Every student learns differently. I find out what motivates them, whether it is cars, football, or music, and use that to make lessons engaging. Physics becomes relevant, understandable, and easier to remember.</p>
                             </div>
                           </article>
                           <article class="hwt-node right reveal" role="listitem" data-step="4">
@@ -1685,7 +1685,7 @@
                             </div>
                             <div>
                               <h3><span class="step">4. Perform under pressure</span></h3>
-                              <p>I know what it feels like to be worried about being judged. My students never have to feel embarrassed about not knowing something. With patience, practice, and strategy, I help them build exam confidence and real understanding that lasts.</p>
+                              <p>I know what it’s like to worry about being judged. My students never have to feel embarrassed about not knowing something. With patience and practice, I help them build confidence for exams and understanding that really lasts.</p>
                             </div>
                           </article>
                         </div>
