--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -1741,7 +1741,7 @@
                             </div>
                             <div>
                               <h3><span class="step">4. Perform under pressure</span></h3>
-                              <p>I know what it feels like to be worried about being judged. My students never have to feel embarrassed about not knowing something. With patience, practice, and strategy, I help them build exam confidence and real understanding that lasts.</p>
+                              <p>I know what it’s like to worry about being judged. My students never have to feel embarrassed about not knowing something. With patience and practice, I help them build confidence for exams and understanding that really lasts.</p>
                             </div>
                           </article>
                         </div>
