--- a/pages/subjects/gcse-english-language.html
+++ b/pages/subjects/gcse-english-language.html
@@ -1708,10 +1708,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/mahdiya.jpg" alt="Mahdiya profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“He's an amazing tutor always clear, supportive and encouraging. His guidance really helps build confidence and progress. Makes learning alot more fun!”</blockquote>
+                          <div class="corp-meta">Mahdiya T • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
