--- a/pages/subjects/gcse-english-literature.html
+++ b/pages/subjects/gcse-english-literature.html
@@ -1710,7 +1710,7 @@
                               <img src="../../assets/logos/mahdiya.jpg" alt="Mahdiya profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“He's an amazing tutor always clear, supportive and encouraging. His guidance really helps build confidence and progress. Makes learning alot more fun!”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <div class="corp-meta">Mahdiya T • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
