--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -1764,10 +1764,10 @@
                     <div class="swiper-slide">
                       <div class="corp-testimonial">
                         <div class="corp-logo" aria-hidden="true">
-                            <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                            <img src="../../assets/logos/Adam.jpg" alt="Adam profile" loading="lazy" />
                         </div>
-                        <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                        <div class="corp-meta">Afifa A • Student</div>
+                        <blockquote class="corp-quote">“He’s not one of those tutors who make you wish the lesson was over from the first minute. He keeps you engaged at all times, is friendly and patient, knows how to turn your weak areas into strengths, and supports you every step of the way.”</blockquote>
+                        <div class="corp-meta">Adam R • Student</div>
                       </div>
                     </div>
                     <div class="swiper-slide">
