--- a/pages/subjects/gcse-physics.html
+++ b/pages/subjects/gcse-physics.html
@@ -1708,10 +1708,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/Dani.jpg" alt="Dani profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“Physics finally makes sense! Instead of guessing through questions, I understand the ideas behind them, which makes solving problems so much less stressful.”</blockquote>
+                          <div class="corp-meta">Danilo T • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
