--- a/pages/subjects/gcse-english-literature.html
+++ b/pages/subjects/gcse-english-literature.html
@@ -1707,7 +1707,7 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/mahdiya.jpg" alt="Mahdiya profile" loading="lazy" />
+                              <img src="../../assets/logos/Mahdiya.jpg" alt="Mahdiya profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“He's an amazing tutor always clear, supportive and encouraging. His guidance really helps build confidence and progress. Makes learning alot more fun!”</blockquote>
                           <div class="corp-meta">Mahdiya T • Student</div>
