--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -1773,10 +1773,10 @@
                     <div class="swiper-slide">
                       <div class="corp-testimonial">
                         <div class="corp-logo" aria-hidden="true">
-                            <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
+                            <img src="../../assets/logos/yahya.jpg" alt="Yahya profile" loading="lazy" />
                         </div>
-                        <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                        <div class="corp-meta">Robin • Student</div>
+                        <blockquote class="corp-quote">“I usually hate maths, but I actually enjoyed the sessions with Lukas. He explained things in a way that was easy to understand and made me feel comfortable. The one-to-one classes helped a lot and weren’t stressful at all.”</blockquote>
+                        <div class="corp-meta">Yahya M • Student</div>
                       </div>
                     </div>
                     <div class="swiper-slide">
