--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -1776,16 +1776,16 @@
                             <img src="../../assets/logos/yahya.jpg" alt="Yahya profile" loading="lazy" />
                         </div>
                         <blockquote class="corp-quote">“I usually hate maths, but I actually enjoyed the sessions with Lukas. He explained things in a way that was easy to understand and made me feel comfortable. The one-to-one classes helped a lot and weren’t stressful at all.”</blockquote>
-                        <div class="corp-meta">Yahya M • Student</div>
+                        <div class="corp-meta">Yahya O • Student</div>
                       </div>
                     </div>
                     <div class="swiper-slide">
                       <div class="corp-testimonial">
                         <div class="corp-logo" aria-hidden="true">
-                            <img src="../../assets/logos/ethan.jpg" alt="Ethan Y profile" loading="lazy" />
+                            <img src="../../assets/logos/alida.jpg" alt="Alida profile" loading="lazy" />
                         </div>
-                        <blockquote class="corp-quote">“Weekly sessions built confidence and timing. My daughter walked into the exam prepared and came out smiling.”</blockquote>
-                        <div class="corp-meta">Ethan Y • Student</div>
+                        <blockquote class="corp-quote">“Lukas has been brilliant with Yahya. Maths has always been a subject he struggled with, but Lukas’s easy-going approach and clear explanations made the lessons engaging and effective. Yahya felt comfortable and supported, and I could see his confidence grow.”</blockquote>
+                        <div class="corp-meta">Alida O• Student</div>
                       </div>
                     </div>
                   </div>
