--- a/pages/subjects/gcse-physics.html
+++ b/pages/subjects/gcse-physics.html
@@ -1708,7 +1708,7 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/Dani.jpg" alt="Dani profile" loading="lazy" />
+                              <img src="../../assets/logos/dani.jpg" alt="Dani profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“Physics finally makes sense! Instead of guessing through questions, I understand the ideas behind them, which makes solving problems so much less stressful.”</blockquote>
                           <div class="corp-meta">Danilo T • Student</div>
