--- a/pages/subjects/alevel-mathematics.html
+++ b/pages/subjects/alevel-mathematics.html
@@ -1756,10 +1756,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/maksym.jpg" alt="Maksym profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped me significantly in my Maths A-level - I went from a C average to an A in a matter of months.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“I always saw stats, mechanics and pure as three separate headaches, but you helped me piece them together. Now I get how the mechanics links to the pure maths, and even stats feels less random. It’s the first time A-Level Maths has actually made sense as one subject..”</blockquote>
+                          <div class="corp-meta">Maksym I • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
