--- a/pages/subjects/alevel-mathematics.html
+++ b/pages/subjects/alevel-mathematics.html
@@ -1765,10 +1765,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
+                              <img src="../../assets/logos/judy.jpg" alt="Judy profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“An amazing return on investment, I am really glad I went through Yuli Learning for my GCSEs!”</blockquote>
-                          <div class="corp-meta">Robin • Student</div>
+                          <div class="corp-meta">Judy K • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
