--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -1785,7 +1785,7 @@
                             <img src="../../assets/logos/alida.jpg" alt="Alida profile" loading="lazy" />
                         </div>
                         <blockquote class="corp-quote">“Lukas has been brilliant with Yahya. Maths has always been a subject he struggled with, but Lukas’s easy-going approach and clear explanations made the lessons engaging and effective. Yahya felt comfortable and supported, and I could see his confidence grow.”</blockquote>
-                        <div class="corp-meta">Alida O• Student</div>
+                        <div class="corp-meta">Alida O• Parent</div>
                       </div>
                     </div>
                   </div>
