--- a/pages/subjects/alevel-mathematics.html
+++ b/pages/subjects/alevel-mathematics.html
@@ -1774,10 +1774,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/ethan.jpg" alt="Ethan Y profile" loading="lazy" />
+                              <img src="../../assets/logos/zach.jpg" alt="Zach Z profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Weekly sessions built confidence and timing. My daughter walked into the exam prepared and came out smiling.”</blockquote>
-                          <div class="corp-meta">Ethan Y • Student</div>
+                          <blockquote class="corp-quote">“Throughout my tutoring I always felt I was supported without having my hand held, this gave me the best circumstances to learn complex topics and succeed in my maths course”</blockquote>
+                          <div class="corp-meta">Zach Z • Student</div>
                         </div>
                       </div>
                     </div>
