--- a/pages/subjects/alevel-chemistry.html
+++ b/pages/subjects/alevel-chemistry.html
@@ -1529,9 +1529,9 @@
                 <p class="tagline">Clarity, confidence, and exam results that last.</p>
                 <a href="/booking/booking-alevel-chemistry.html" class="cta-button">
                     <i class="fas fa-calendar-check"></i>
-                    Book a Lesson
+                    Start Learning Chemistry
                 </a>
-                <div class="cta-subtext">From £20/hr · All UK exam boards covered</div>
+                <div class="cta-subtext">From £35/hr · All UK exam boards covered</div>
             </div>
         </div>
         <div class="scroll-cue" onclick="scrollToContent()">
