--- a/pages/subjects/gcse-english-language.html
+++ b/pages/subjects/gcse-english-language.html
@@ -1484,7 +1484,7 @@
                 <p class="tagline">Clarity, confidence, and exam results that last.</p>
                 <a href="/booking/booking-gcse-english-language.html" class="cta-button">
                     <i class="fas fa-calendar-check"></i>
-                    Book a Lesson
+                    Start Learning English Language
                 </a>
                 <div class="cta-subtext">From £20/hr · All UK exam boards covered</div>
             </div>
