--- a/pages/subjects/gcse-english-literature.html
+++ b/pages/subjects/gcse-english-literature.html
@@ -1483,7 +1483,7 @@
                 <p class="tagline">Clarity, confidence, and exam results that last.</p>
                 <a href="/booking/booking-gcse-english-literature.html" class="cta-button">
                     <i class="fas fa-calendar-check"></i>
-                    Book a Lesson
+                    Start Learning English Literature
                 </a>
                 <div class="cta-subtext">From £20/hr · All UK exam boards covered</div>
             </div>
