--- a/pages/subjects/gcse-further-maths.html
+++ b/pages/subjects/gcse-further-maths.html
@@ -1529,7 +1529,7 @@
                 <p class="tagline">Clarity, confidence, and exam results that last.</p>
                 <a href="/booking/booking-gcse-further-maths.html" class="cta-button">
                     <i class="fas fa-calendar-check"></i>
-                    Book a Lesson
+                    Start Learning Further Mathematics
                 </a>
                 <div class="cta-subtext">From £20/hr · All UK exam boards covered</div>
             </div>
