--- a/pages/subjects/gcse-mathematics.html
+++ b/pages/subjects/gcse-mathematics.html
@@ -1536,7 +1536,7 @@
                 <p class="tagline">Clarity, confidence, and exam results that last.</p>
                 <a href="/booking/booking-gcse-mathematics.html" class="cta-button">
                     <i class="fas fa-calendar-check"></i>
-                    Book a Lesson
+                    Start Learning Mathematics
                 </a>
                 <div class="cta-subtext">From £20/hr · All UK exam boards covered</div>
             </div>
