--- a/index.html
+++ b/index.html
@@ -2222,5 +2222,6 @@ document.addEventListener('keydown', function(e) {
     }
 });
 </script>
+    <script id="messenger-widget-b" src="https://cdn.botpenguin.com/website-bot.js" defer>68d02c2d0f482854b717add8,68d02b3c2f2c944ce27d507f</script>
   </body>
 </html>
