--- a/pages/subjects/gcse-history.html
+++ b/pages/subjects/gcse-history.html
@@ -1708,10 +1708,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/elion.jpg" alt="Elion profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“I felt like I finally understood what the History exam board wanted. The way the Cold War and Weimar Germany were explained made the topics so much clearer, and my grades improved a lot.”</blockquote>
+                          <div class="corp-meta">Elion G • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
