--- a/pages/subjects/gcse-chemistry.html
+++ b/pages/subjects/gcse-chemistry.html
@@ -1715,10 +1715,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/nez.jpg" alt="Nez profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“I panicked with calculations at first, but learning the exam techniques made it so much easier. I felt so much more prepared going into my GCSEs.”</blockquote>
+                          <div class="corp-meta">Nez A • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
