--- a/pages/subjects/alevel-chemistry.html
+++ b/pages/subjects/alevel-chemistry.html
@@ -1757,10 +1757,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
+                              <img src="../../assets/logos/nez.jpg" alt="Nez profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Yuli helped my son jump two grades in just a term. Clear teaching and a structured plan made all the difference.”</blockquote>
-                          <div class="corp-meta">Afifa A • Student</div>
+                          <blockquote class="corp-quote">“A-level Chemistry was so much more detailed than GCSE, but breaking everything into manageable steps made it feel possible. I never thought I’d say it, but I actually started to like the challenge.”</blockquote>
+                          <div class="corp-meta">Nez J • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
