--- a/pages/subjects/alevel-mathematics.html
+++ b/pages/subjects/alevel-mathematics.html
@@ -1767,7 +1767,7 @@
                           <div class="corp-logo" aria-hidden="true">
                               <img src="../../assets/logos/judy.jpg" alt="Judy profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“An amazing return on investment, I am really glad I went through Yuli Learning for my GCSEs!”</blockquote>
+                          <blockquote class="corp-quote">“An amazing return on investment, I am really glad I went through Yuli Learning for my A-Levels!”</blockquote>
                           <div class="corp-meta">Judy K • Student</div>
                         </div>
                       </div>
