--- a/pages/subjects/gcse-geography.html
+++ b/pages/subjects/gcse-geography.html
@@ -1708,7 +1708,7 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/ant.jpg" alt="Anthony profile" loading="lazy" />
+                              <img src="../../assets/logos/Ant.jpg" alt="Anthony profile" loading="lazy" />
                           </div>
                           <blockquote class="corp-quote">“I used to find Geography overwhelming, especially the case studies, but breaking them down step by step really helped. I never thought it would become one of the subjects I felt confident in.”</blockquote>
                           <div class="corp-meta">Anthony Q • Student</div>
