--- a/pages/subjects/gcse-english-language.html
+++ b/pages/subjects/gcse-english-language.html
@@ -1717,10 +1717,10 @@
                       <div class="swiper-slide">
                         <div class="corp-testimonial">
                           <div class="corp-logo" aria-hidden="true">
-                              <img src="../../assets/logos/robin.jpg" alt="Robin profile" loading="lazy" />
+                              <img src="../../assets/logos/afifa.jpg" alt="Afifa profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“Professional, calm, and effective. The diagnostic lesson gave us a clear roadmap — we finally knew what to focus on.”</blockquote>
-                          <div class="corp-meta">Robin • Student</div>
+                          <blockquote class="corp-quote">“Yuli really helped me with my creative writing and grammar, it's something I've always struggled with but now I can confidently say I am really good At.”</blockquote>
+                          <div class="corp-meta">Afifa A • Student</div>
                         </div>
                       </div>
                       <div class="swiper-slide">
