--- a/pages/subjects/gcse-english-language.html
+++ b/pages/subjects/gcse-english-language.html
@@ -1710,7 +1710,7 @@
                           <div class="corp-logo" aria-hidden="true">
                               <img src="../../assets/logos/Mahdiya.jpg" alt="Mahdiya profile" loading="lazy" />
                           </div>
-                          <blockquote class="corp-quote">“He's an amazing tutor always clear, supportive and encouraging. His guidance really helps build confidence and progress. Makes learning alot more fun!”</blockquote>
+                          <blockquote class="corp-quote">“Lukas is an amazing tutor always clear, supportive and encouraging. His guidance really helps build confidence and progress. Makes learning alot more fun!”</blockquote>
                           <div class="corp-meta">Mahdiya T • Student</div>
                         </div>
                       </div>
